# t1-human-segmentation

./: .gitignore  README.md  pyproject.toml
src/: modnet_seg.py  yolo_combined.py  yolo_segmentation.py
web/: README.md  app.js  example.json  indexV2.html  seg.js  site1.js
