[project]
name = "dress-code-human-segmentation"
version = "0.1.0"
description = "YOLO11 human segmentation with motion detection for dress code analysis"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
managed = true
